--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -4,3 +4,4 @@ $fa-font-path: "../fonts/vendor";
 @import "../../node_modules/font-awesome/scss/font-awesome";
 @import "shame";
 @import "syntax";
+@import "post";
