--- a/source/layouts/post.erb
+++ b/source/layouts/post.erb
@@ -1,3 +1,7 @@
+<% content_for :header do %>
+    <header class="post-header"></header>
+<% end %>
+
 <% wrap_layout :layout do %>
     <article class="post">
         <h1><%= current_article.title %></h1>
