--- a/source/stylesheets/_shame.scss
+++ b/source/stylesheets/_shame.scss
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: $font-family-serif;
   font-size: 20px;
   color: #333333;
 }
@@ -21,8 +21,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 800;
+  font-family: $font-family-heading;
+  font-weight: $font-weight-heading;
 }
 a {
   color: #333333;
@@ -51,7 +51,7 @@ hr.small {
   left: 0;
   width: 100%;
   z-index: 3;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
 }
 .navbar-custom .navbar-brand {
   font-weight: 800;
@@ -174,7 +174,7 @@ hr.small {
   font-size: 24px;
   line-height: 1.1;
   display: block;
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   font-weight: 300;
   margin: 10px 0 0;
 }
@@ -193,13 +193,13 @@ hr.small {
   display: block;
 }
 .intro-header .post-heading .subheading {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   font-size: 24px;
   margin: 10px 0 30px;
   font-weight: 600;
 }
 .intro-header .post-heading .meta {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: $font-family-serif;
   font-style: italic;
   font-weight: 300;
   font-size: 20px;
@@ -331,7 +331,7 @@ form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
 }
 .btn {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -354,7 +354,7 @@ form .row:first-child .floating-label-form-group {
 }
 .pager li > a,
 .pager li > span {
-  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: $font-family-sans-serif;
   text-transform: uppercase;
   font-size: 14px;
   font-weight: 800;
@@ -399,3 +399,7 @@ body {
   -webkit-tap-highlight-color: #0085A1;
 }
 
+.post-header {
+  background: #777;
+  height: 64px;
+}
